--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -867,42 +867,42 @@ span.flatpickr-weekday,
   cursor: grabbing; /* Changes the cursor to indicate dragging */
 }
 
-.mobileRangePickerWrapper :global(.ant-picker-panel) {
+.mobileRangePickerWrapper .ant-picker-panel {
     &:last-child {
         width: 0;
     }
 
-    &:last-child :global(.ant-picker-header) {
+    &:last-child .ant-picker-header {
         position: absolute;
         right: 0;
     }
 
-    &:last-child :global(.ant-picker-header-prev-btn),
-    &:last-child :global(.ant-picker-header-view) {
+    &:last-child .ant-picker-header-prev-btn,
+    &:last-child .ant-picker-header-view {
         visibility: hidden;
     }
 
-    &:last-child :global(.ant-picker-body) {
+    &:last-child .ant-picker-body {
         display: none;
     }
 }
 
 @media (min-width: 768px) {
-    .mobileRangePickerWrapper :global(.ant-picker-panel) {
+    .mobileRangePickerWrapper .ant-picker-panel {
         &:last-child {
             width: 280px !important;
         }
 
-        &:last-child :global(.ant-picker-header) {
+        &:last-child .ant-picker-header {
             position: relative;
         }
 
-        &:last-child :global(.ant-picker-header-prev-btn),
-        &:last-child :global(.ant-picker-header-view) {
+        &:last-child .ant-picker-header-prev-btn,
+        &:last-child .ant-picker-header-view {
             visibility: initial;
         }
 
-        &:last-child :global(.ant-picker-body) {
+        &:last-child .ant-picker-body {
             display: block;
         }
     }
